[workspace]
resolver = "2"
members = [
    "crates/compiler",
    "crates/maya-mutf8",
    "crates/maya-bytes",
    "crates/maya-classfile-io",
    "crates/maya-classfile-verifier",
    "crates/maya-classfile-ir",
    "crates/maya-test-bin",
]

[workspace.package]
version = "0.0.1-dev"
edition = "2021"

[workspace.dependencies]
maya-mutf8 = { path = "crates/maya-mutf8" }
maya-bytes = { path = "crates/maya-bytes" }
maya-classfile-io = { path = "crates/maya-classfile-io" }
maya-classfile-ir = { path = "crates/maya-classfile-ir" }
maya-classfile-verifier = { path = "crates/maya-classfile-verifier" }

log = "0.4"
eyre = "0.6.8"
paste = "1.0.14"
thiserror = "1.0"
pretty_env_logger = "0.5.0"
